welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: ')' expected but 'if' found.
  if (a<=20 && a>=10 && b<=20 && b>=10) {
  ^max1020:8: error: ';' expected but 'if' found.
  if (a<=20 && a>=10 && () b>20 || b<10)){
  ^